--- a/site/scss/core/_base.scss
+++ b/site/scss/core/_base.scss
@@ -1,6 +1,6 @@
-@import '../setup/setup';
 @import '../vendor/normalize';
 
+// app specific resets
 *, *:before, *:after {
     box-sizing: border-box;
 }
@@ -10,7 +10,7 @@ html, body {
 }
 
 html {
-    height: 100%;
+    min-height: 100%;
     overflow-y: scroll;
 }
 
@@ -21,7 +21,6 @@ body {
     color: $color-text;
     font-family: $font-body;
 }
-
 
 img {
     width: 100%;
