--- a/site/scss/core/_base.scss
+++ b/site/scss/core/_base.scss
@@ -46,6 +46,7 @@ a {
 .page-limit {
     margin-left: auto;
     margin-right: auto;
+    max-width: 780px;
     padding-left: $grid-unit-small;
     padding-right: $grid-unit-small;
 }
