--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -3,6 +3,16 @@
 <head>
     <title>TubeAlert</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="apple-touch-icon" sizes="180x180" href="<%= require('../imgs/apple-touch-icon.png') %>" />
+    <link rel="icon" type="image/png" href="<%= require('../imgs/favicon-32x32.png') %>" sizes="32x32" />
+    <link rel="icon" type="image/png" href="<%= require('../imgs/favicon-16x16.png') %>" sizes="16x16" />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="mask-icon" href="<%= require('../imgs/safari-pinned-tab.svg') %>" color="#3a3a3f" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <meta name="apple-mobile-web-app-title" content="TubeAlert" />
+    <meta name="application-name" content="TubeAlert" />
+    <meta name="msapplication-config" content="/browserconfig.xml" />
+    <meta name="theme-color" content="#3a3a3f" />
 </head>
 <body>
     <div style="display:none">
