--- a/site/scss/setup/_variables.scss
+++ b/site/scss/setup/_variables.scss
@@ -15,6 +15,9 @@ $color-button-bg: $color-header-bg;
 $color-button-text: $color-header-text;
 $color-button-hover: #4a5265;
 
+$color-warning-bg: #e81b00;
+$color-warning-text: #fff;
+
 // Sizes
 $grid-unit-large: 16px;
 $grid-unit-small: 8px;
