--- a/site/scss/organisms/_header.scss
+++ b/site/scss/organisms/_header.scss
@@ -1,5 +1,3 @@
-@import '../setup/setup';
-
 $header-padding: 12px;
 $header-height: 52px;
 
@@ -11,9 +9,11 @@ $header-height: 52px;
     a {
         color: inherit;
         text-decoration: none;
-    }
-    *:hover {
-        color: $color-header-hover;
+        &:hover,
+        &:active,
+        &:focus {
+            color: $color-header-hover;
+        }
     }
 }
 
