Add Elizabeth Line CSS

--- a/src/scss/molecules/_linebox.scss
+++ b/src/scss/molecules/_linebox.scss
@@ -74,3 +74,8 @@
 [data-linebox="tfl-rail"] {
     background: #0019a8;
 }
+
+.linebox--elizabeth-line,
+[data-linebox="elizabeth-line"] {
+    background: #7156a5;
+}
