--- a/src/components/Lines.css
+++ b/src/components/Lines.css
@@ -2,6 +2,9 @@
 	display: flex;
 	flex-direction: column;
 	height: 100%;
+	max-height: 100vh;
+	padding-bottom: env(safe-inset-area-bottom);
+	background: var(--color-header-background);
 }
 
 .lines__item {
