--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,6 +9,7 @@
 	--color-body-background: #e8e8e8;
 	--color-panel-background: #ffffff;
 	--color-body-text: #424248;
+	--color-header-background: #383b3f;
 
 	--color-line-background: #444444;
 	--color-line-foreground: #ffffff;
@@ -86,6 +87,8 @@ html {
 }
 svg {
 	fill: currentColor;
+	max-width: 100%;
+	max-height: 100%;
 }
 
 body {
@@ -174,25 +177,101 @@ li {
 	--color-line-foreground: var(--color-line-dlr-foreground);
 }
 
-body {
+.app {
 	display: grid;
-	grid-template-columns: 320px 1fr;
-	grid-template-rows: 52px 1fr;
 	min-height: 100vh;
+	grid-template-columns: 1fr;
+	grid-template-rows: 52px 1fr;
 }
 
 header {
 	grid-row: 1 / 2;
-	grid-column: 2 / 2;
-	background: #111;
+	grid-column: 1 / 2;
+	position: fixed;
+	top: 0;
+	width: 100%;
+	height: 52px;
 }
 
 main {
-	grid-column: 2 / 2;
-	grid-row: 2 / 2;
+	grid-column: 1 / 2;
+	grid-row: 2 / 3;
+}
+.main--home {
+	display: none;
 }
 
 nav {
 	grid-column: 1 / 2;
-	grid-row: 1 / 3;
+	grid-row: 2 / 3;
+}
+
+.nav--subpage {
+	display: none;
+}
+
+@media (min-width: 48em) {
+	.app {
+		grid-template-columns: 320px 1fr;
+		grid-template-rows: 52px 1fr;
+	}
+	header {
+		position: static;
+		grid-row: 1 / 2;
+		grid-column: 2 / 2;
+	}
+
+	main {
+		grid-column: 2 / 2;
+		grid-row: 2 / 2;
+	}
+
+	nav {
+		grid-column: 1 / 2;
+		grid-row: 1 / 3;
+		position: fixed;
+		top: 0;
+		bottom: 0;
+		width: 320px;
+	}
+
+	.main--home {
+		display: block;
+	}
+
+	.nav--subpage {
+		display: block;
+	}
+}
+
+header {
+	background: var(--color-header-background);
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 0 12px;
+}
+
+header a {
+	color: inherit;
+	text-decoration: none;
+}
+header a:hover,
+header a:active,
+header a:focus {
+	color: #aaa;
+}
+
+.header__title {
+	font-size: 24px;
+	line-height: 1;
+	letter-spacing: -1px;
+	font-weight: lighter;
+}
+
+.header__back,
+.header__settings {
+	display: block;
+	width: 28px;
+	height: 28px;
 }
